<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">华元ERP</string>

    <!-- SearchOrderFragment  -->
    <string name="search_order_keyword">关键字</string>
    <string name="search_order_startDate">开始日期</string>
    <string name="search_order_endDate">结束日期</string>
    <string name="search_order_searchButton">查询</string>

    <!-- SearchApprovalFragment  -->
    <string name="search_approval_keyword">关键字</string>
    <string name="search_approval_startDate">开始日期</string>
    <string name="search_approval_endDate">结束日期</string>
    <string name="search_approval_approved">已审批</string>
    <string name="search_approval_unapproved">未审批</string>
    <string name="search_approval_searchButton">查询</string>

    <!-- OrderBasicInfoFragment -->
    <string name="order_basicInfo_timeLimit">装运期限:</string>
    <string name="order_basicInfo_startPort">出运港口:</string>
    <string name="order_basicInfo_destPort">目的港口:</string>
    <string name="order_basicInfo_shouhuiType">收汇方式:</string>
    <string name="order_basicInfo_priceRule">价格条款:</string>


    <!-- OrderChuyunFragment -->
    <string name="order_chuyun_detailNo">明细单编号:</string>
    <string name="order_chuyun_date">发票日期:</string>
    <string name="order_chuyun_amount">金额:</string>

    <!-- OrderShouhuiFragment -->
    <string name="order_shouhui_date">日期:</string>
    <string name="order_shouhui_amount">金额:</string>


    <!-- MyInfoFragment -->
    <string  name="myinfo_username">帐号</string>
    <string  name="myinfo_name">姓名</string>
    <string  name="myinfo_department">部门</string>
    <string  name="myinfo_version">版本号</string>
    <string  name="myinfo_logoutbutton">退出登录</string>


    <!-- ApprovalFragment -->
    <string name="approval_object">审批对象:</string>
    <string name="approval_keyword">关键字:</string>
    <string name="approval_amount">金  额:</string>
    <string name="approval_reporter">报审人员:</string>
    <string name="approval_reportDate">报审时间:</string>
    <string name="approval_status">状  态:</string>
    <string name="approval_result">审批结果:</string>
    <string name="approval_pass_button">批准</string>
    <string name="approval_unpass_button">不批准</string>


    <!-- LoginFragment -->
    <string name="login_loginButton">登录</string>
    <string name="login_userName">  用户名</string>
    <string name="login_password">密码</string>
    <string name="login_configButton">配置</string>

    <!-- configFragment -->
    <string name="config_http">协议</string>
    <string name="config_serverName">  服务器名 </string>
    <string name="config_port">端口号</string>
    <string name="config_saveButton">保存</string>

    <!-- StartFragment -->
    <string name="start_appName">华元ERP</string>
    <string name="start_forAndroid">For Android</string>
    <string name="start_copyright">copyright@杭州华元 版权所有</string>

    <!-- ProductDetailFragment -->
    <string name="product_chineseName">中文名称:</string>
    <string name="product_englishName">英文名称:</string>
    <string name="product_huohao">货号:</string>
    <string name="product_xinghao">规格型号:</string>
    <string name="product_chineseDesc">中文描述:</string>
    <string name="product_englishDesc">英文描述:</string>
    <string name="product_chengbenPrice">标准成本价:</string>
    <string name="product_sellPrice">标准销售价:</string>



    <string name="date_picker_title">选择日期</string>
    <string name="loading">加载中</string>

</resources>
