<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        style="@style/productRow"
        >
        <TextView
            style="@style/productRow.name"
            android:text="@string/product_chineseName"/>
        <TextView
            android:id="@+id/product_chineseName"
            style="@style/productRow.value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/productRow"
        >
        <TextView
            style="@style/productRow.name"
            android:text="@string/product_englishName"/>
        <TextView
            android:id="@+id/product_englishName"
            style="@style/productRow.value"/>
    </LinearLayout>


    <LinearLayout
        style="@style/productRow"
        >
        <TextView
            style="@style/productRow.name"
            android:text="@string/product_huohao"/>
        <TextView
            android:id="@+id/product_huohao"
            style="@style/productRow.value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/productRow"
        >
        <TextView
            style="@style/productRow.name"
            android:text="@string/product_xinghao"/>
        <TextView
            android:id="@+id/product_xinghao"
            style="@style/productRow.value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/productRow"
        >
        <TextView
            style="@style/productRow.name"
            android:text="@string/product_chengbenPrice"/>
        <TextView
            android:id="@+id/product_chengbenPrice"
            style="@style/productRow.value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/productRow"
        >
        <TextView
            style="@style/productRow.name"
            android:text="@string/product_sellPrice"/>
        <TextView
            android:id="@+id/product_sellPrice"
            style="@style/productRow.value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/productRow"
        >
        <TextView
            style="@style/productRow.name"
            android:text="@string/product_chineseDesc"/>
        <TextView
            android:id="@+id/product_chineseDesc"
            style="@style/productRow.value"/>
    </LinearLayout>

    <LinearLayout
        style="@style/productRow"
        >
        <TextView
            style="@style/productRow.name"
            android:text="@string/product_englishDesc"/>
        <TextView
            android:id="@+id/product_englishDesc"
            style="@style/productRow.value"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
    </LinearLayout>

</LinearLayout>
