<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >
    <LinearLayout
        style="@style/myInfoRow">
        <TextView
            style="@style/myInfoRow.name"
            android:text="@string/myinfo_username"/>

        <TextView
            android:id="@+id/myinfo_username"
            style="@style/myInfoRow.value"/>

    </LinearLayout>

    <LinearLayout
        style="@style/myInfoRow">

        <TextView
            style="@style/myInfoRow.name"
            android:text="@string/myinfo_name"
            />

        <TextView
            android:id="@+id/myinfo_name"
            style="@style/myInfoRow.value"/>
    </LinearLayout>


    <LinearLayout
        style="@style/myInfoRow">

        <TextView
            style="@style/myInfoRow.name"
            android:text="@string/myinfo_department"
            />

        <TextView
            android:id="@+id/myinfo_department"
            style="@style/myInfoRow.value"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/myinfo_logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myinfo_logoutbutton"
            android:background="#5164f1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_weight="0.09"/>
    </LinearLayout>




</LinearLayout>
