<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        >
        <TextView
            style="@style/basicInfoRow.name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_basicInfo_timeLimit"/>
        <TextView
            android:id="@+id/order_basicInfo_timeLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        style="@style/basicInfoRow"
        >
        <TextView
            style="@style/basicInfoRow.name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_basicInfo_startPort"/>
        <TextView
            android:id="@+id/order_basicInfo_startPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        style="@style/basicInfoRow"
        >
        <TextView
            style="@style/basicInfoRow.name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_basicInfo_destPort"/>
        <TextView
            android:id="@+id/order_basicInfo_destPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        style="@style/basicInfoRow"
        >
        <TextView
            style="@style/basicInfoRow.name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_basicInfo_shouhuiType"/>
        <TextView
            android:id="@+id/order_basicInfo_shouhuiType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        style="@style/basicInfoRow"
        >
        <TextView
            style="@style/basicInfoRow.name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_basicInfo_priceRule"/>
        <TextView
            android:id="@+id/order_basicInfo_priceRule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>
