<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >
    <LinearLayout
        style="@style/searchFormRow">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/search_approval_keyword"/>


        <EditText
            android:id="@+id/search_approval_keyword"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="@drawable/rounded_edittext"
            android:textCursorDrawable="@null"
            android:lines="1"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        style="@style/searchFormRow">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:text="@string/search_approval_startDate"
            />

        <Button
            android:id="@+id/search_approval_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|center"
            android:layout_weight="0.20"/>
    </LinearLayout>


    <LinearLayout
        style="@style/searchFormRow">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/search_approval_endDate"
            />

        <Button
            android:id="@+id/search_approval_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|center"
            android:layout_weight="0.20"/>
    </LinearLayout>

    <LinearLayout
        style="@style/searchFormRow">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/search_approval_unapproved"
            />


        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/search_approval_unapproved"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        style="@style/searchFormRow">
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"

            android:text="@string/search_approval_approved"
            />


        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/search_approval_approved"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        style="@style/searchFormRowButton">
        <Button
            android:id="@+id/search_approval_searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_approval_searchButton"
            android:background="#5164f1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_weight="0.09"/>
    </LinearLayout>




</LinearLayout>
