<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:layout_marginTop="30dp"
        style="@style/loginRow"
        android:orientation="vertical"
        android:gravity="center|center_vertical"
        >


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="0dp"
            android:layout_gravity="center"
            android:src="@drawable/loginlog"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:weightSum="1"
        style="@style/loginRow"
       >


        <EditText
            android:id="@+id/login_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:textCursorDrawable="@null"
            android:hint="@string/login_userName"

            android:drawableLeft="@drawable/usericon"
            android:drawablePadding="10dp"
            android:lines="1"
            android:textSize="18dp"
            android:inputType="text"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        style="@style/loginRow"
        >


        <EditText
            android:id="@+id/login_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/login_password"
            android:inputType="text"
            android:drawableLeft="@drawable/passwordicon"
            android:drawablePadding="10dp"
            android:lines="1"
            android:textSize="18dp"
            android:password="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/loign_loginButton"

            android:text="@string/login_loginButton"
            style="@style/buttonStyle"
            android:background="@color/colorPrimary"/>
    </LinearLayout>




</LinearLayout>
