<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/search_order_keyword"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:drawableRight="@drawable/searchicon"
            android:hint="@string/search_order_keyword"
            android:background="@drawable/edit_text_border"
            android:padding="5dip"
            android:lines="1"
            android:textSize="14dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_order_startDate"

            android:layout_weight="0.5"
            android:layout_marginLeft="18dp"
            android:textSize="14dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search_order_endDate"
            android:layout_marginLeft="9dp"
            android:layout_weight="0.5"
            android:textSize="14dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_order_startDate"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_border"
            android:padding="5dip"
            android:lines="1"
            android:inputType="none"
            android:layout_weight="0.5"
            android:textSize="14dp"
            android:drawableRight="@drawable/dateicon"
            android:focusable="false"
            android:textAlignment="viewStart"/>

        <EditText
            android:id="@+id/search_order_endDate"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/edit_text_border"
            android:padding="5dip"
            android:lines="1"
            android:inputType="none"
            android:layout_weight="0.5"
            android:textSize="14dp"
            android:drawableRight="@drawable/dateicon"
            android:focusable="false"
            android:textAlignment="textStart"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/search_order_searchButton"

            android:text="@string/search_order_searchButton"
            style="@style/buttonStyle"
            android:layout_weight="0.9"/>
    </LinearLayout>




</LinearLayout>
